# discord-drive

./: .gitignore  Cargo.toml  README.md
config/: config.toml.example
src/: main.rs
src/functions/: chunks.rs  database.rs  mod.rs  retrieve.rs
src/structs/: cli.rs  directory.rs  drive_config.rs  mod.rs
