[package]
name = "discord-drive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11.5", features = [
    "model",
    "http",
    "rustls_backend",
] }
rayon = "1.6.1"
streaming-iterator = "0.1.9"
serde = { version = "1.0", features = ["derive"] }
confy = "0.5.1"