[package]
name = "discord-drive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread", "rt", "sync"] }
serenity = { version = "0.11.5", features = [
    "model",
    "http",
    "rustls_backend",
] }
serde = { version = "1.0", features = ["derive"] }
confy = "0.5.1"
futures = "0.3.25"
firestore = "0.25.0"
reqwest = "0.11.13"
structopt = "0.3"